--- a/WritingPlatform/packages.config
+++ b/WritingPlatform/packages.config
@@ -2,24 +2,24 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="AutoMapper" version="9.0.0" targetFramework="net461" />
-  <package id="bootstrap" version="4.4.0" targetFramework="net461" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="EntityFramework.ru" version="6.1.3" targetFramework="net452" />
+  <package id="bootstrap" version="4.4.1" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EntityFramework.ru" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.4.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net452" requireReinstallation="true" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.JavaScript" version="0.22.9-build00167" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.0.0" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.0.0" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.0.0" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.0.0" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights" version="2.13.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.9.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.9.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.9.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.9.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.9.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor.ru" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization.ru" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
@@ -37,5 +37,10 @@
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net461" />
   <package id="popper.js" version="1.16.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
