Update IoC Container

--- a/WritingPlatform/Web.config
+++ b/WritingPlatform/Web.config
@@ -35,6 +35,13 @@
       <forms loginUrl="~/Users/Login" timeout="60" />
       </authentication>
   </system.web>
+  <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <clear />
+      <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL" />
+      <error statusCode="403" path="/Error/Forbidden" responseMode="ExecuteURL" />
+    </httpErrors>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
@@ -271,7 +278,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
@@ -288,6 +295,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.ApplicationInsights" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.13.1.12554" newVersion="2.13.1.12554" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.2.0" newVersion="5.1.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
