--- a/WritingPlatform.BusinessLayer/packages.config
+++ b/WritingPlatform.BusinessLayer/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="5.1.2" targetFramework="net461" />
   <package id="AutoMapper" version="9.0.0" targetFramework="net461" />
-  <package id="Ninject" version="3.3.4" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
 </packages>
