--- a/WritingPlatform.Tests/app.config
+++ b/WritingPlatform.Tests/app.config
@@ -34,6 +34,10 @@
         <assemblyIdentity name="Microsoft.ApplicationInsights" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.13.1.12554" newVersion="2.13.1.12554" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.2.0" newVersion="5.1.2.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
