--- a/WritingPlatform/packages.config
+++ b/WritingPlatform/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
+  <package id="Autofac" version="5.1.2" targetFramework="net461" />
+  <package id="Autofac.Mvc5" version="5.0.0" targetFramework="net461" />
   <package id="AutoMapper" version="9.0.0" targetFramework="net461" />
   <package id="bootstrap" version="4.4.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
@@ -24,6 +26,7 @@
   <package id="Microsoft.AspNet.Web.Optimization.ru" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
@@ -31,10 +34,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
-  <package id="Ninject" version="3.3.4" targetFramework="net461" />
-  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net461" />
-  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net461" />
-  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net461" />
   <package id="popper.js" version="1.16.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
@@ -42,5 +41,6 @@
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
